--- a/scss/components/_cart.scss
+++ b/scss/components/_cart.scss
@@ -26,7 +26,7 @@
   }
 
   &__items-top {
-    margin: 1.5rem 0 1.5rem 0;
+    margin: 1.4rem 0 1.54rem 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -55,15 +55,15 @@
     &-label {
       margin-bottom: 0.2rem;
       display: flex;
-      position: relative;
-      bottom: 0.1015rem;
     }
 
     &-checkbox {
       display: block;
-      margin: 0.25rem 1.1rem 0 0;
-      position: relative;
-      top: 0.02rem;
+      margin: 0.29rem 1.09rem 0 0;
+
+      @include responsive(desktop-sm) {
+        margin: 0.25rem 1.1rem 0 0;
+      }
 
       &::before {
         opacity: 0;
@@ -81,7 +81,7 @@
 
   &__collapse-btn {
     display: block;
-    margin-right: 0.4rem;
+    margin: 0.2rem 0.4rem 0 0;
     border: transparent;
     background-color: transparent;
     width: 2rem;
@@ -182,7 +182,7 @@
   }
 
   &__result {
-    margin-top: 2.37rem;
+    margin-top: 2.39rem;
 
     @include responsive(desktop-sm) {
       display: none;
@@ -375,7 +375,7 @@
     span {
       display: block;
       width: 3.2rem;
-      margin-top: -0.5rem;
+      margin-top: -0.3rem;
       text-align: center;
 
       @include responsive(desktop-sm) {
@@ -389,7 +389,7 @@
   &__plus-btn,
   &__minus-btn {
     height: 3.2rem;
-    margin: -0.5rem 0.67rem 0rem 0.8rem;
+    margin: -0.34rem 0.67rem 0rem 0.8rem;
 
     @include responsive(desktop-sm) {
       margin: -0.31rem 0.8rem 0 1rem;
@@ -574,7 +574,7 @@
 }
 
 .multiline-name .cart-item__name {
-  margin-top: 0.11rem;
+  margin-top: 0.13rem;
 
   @include responsive(desktop-sm) {
     margin-top: 0.03rem;
@@ -694,12 +694,12 @@
 }
 
 .delivery {
-  padding: 1.7rem 0 1.55rem 0;
+  padding: 1.72rem 0 1.55rem 0;
   border-radius: 1.6rem;
   background: var(--system-white);
 
   @include responsive(tablet) {
-    padding: 1.54rem 0 1.94rem 0;
+    padding: 1.6rem 0 1.94rem 0;
   }
 
   &__title-wrap {
@@ -724,8 +724,12 @@
   }
 
   &__schedule {
-    margin-top: 0.35rem;
+    margin-top: 0.33rem;
     position: relative;
+
+    @include responsive(desktop-sm) {
+      margin-top: 0.35rem;
+    }
 
     &::before {
       content: "";
@@ -734,7 +738,7 @@
       height: 1.2rem;
       width: 1.2rem;
       position: relative;
-      top: 0.09rem;
+      top: 0.05rem;
       background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.69769 1.48247C6.43817 0.861648 5.56198 0.861639 5.30244 1.48244L6.69769 1.48247ZM5.30244 1.48244L4.14719 4.24303L1.19202 4.49939C0.519264 4.55792 0.262282 5.39291 0.759713 5.82789L3.00514 7.7924L2.33207 10.7156C2.18436 11.3571 2.87792 11.89 3.46133 11.5356L6.00032 9.98936L8.53797 11.5348C9.12269 11.892 9.81568 11.3559 9.66861 10.7159L8.99549 7.79241L11.2402 5.82862C11.7385 5.39286 11.4793 4.55844 10.8083 4.49992L7.85294 4.24355L6.69769 1.48247" fill="%23FF970D"/></svg>');
     }
 
@@ -744,7 +748,7 @@
   }
 
   &__charge {
-    margin-top: 1.6rem;
+    margin-top: 1.63rem;
     padding-bottom: 0.42rem;
 
     @include responsive(tablet) {
@@ -757,7 +761,7 @@
     margin-top: 1.2rem;
 
     @include responsive(tablet) {
-      margin-top: 1.62rem;
+      margin-top: 1.6rem;
     }
   }
 
@@ -886,7 +890,7 @@
 
 .result__refuse-descr::before {
   left: 0.8rem;
-  top: 47%;
+  top: 46%;
   transform: translateY(-50%);
 }
 
@@ -998,10 +1002,10 @@
   }
 
   &__tax-number-descr {
-    position: absolute;
-    bottom: -0.1rem;
-    left: -0.08rem;
     display: block;
+    position: absolute;
+    bottom: -0.2rem;
+    left: -0.1rem;
     height: 1rem;
 
     @include responsive(desktop-sm) {
@@ -1093,7 +1097,7 @@ input:not(:placeholder-shown) + span {
   }
 
   &__goods {
-    margin-top: 0.65rem;
+    margin-top: 0.6rem;
 
     @include responsive(desktop-sm) {
       margin-top: 0.7rem;
@@ -1131,11 +1135,12 @@ input:not(:placeholder-shown) + span {
   }
 
   &__refuse-descr {
-    margin-top: 1.68rem;
-    padding: 0.9rem 0.8rem 1rem 3.8rem;
+    margin-top: 1.8rem;
+    padding: 0.9rem 0.8rem 1.06rem 3.8rem;
 
     @include responsive(desktop-sm) {
       margin-top: 0.9rem;
+      padding: 0.9rem 0.8rem 1.1rem 3.8rem;
     }
   }
 
@@ -1144,6 +1149,7 @@ input:not(:placeholder-shown) + span {
 
     @include responsive(desktop-sm) {
       padding-bottom: 1.2rem;
+      margin-top: 0.6rem;
     }
   }
 
@@ -1175,6 +1181,10 @@ input:not(:placeholder-shown) + span {
     border-radius: 0.8rem;
     background: var(--system-magenta);
     border: transparent;
+
+    @include responsive(desktop-sm) {
+      margin-top: 2.45rem;
+    }
   }
 
   &__terms {
@@ -1186,7 +1196,7 @@ input:not(:placeholder-shown) + span {
       content: "";
       display: block;
       position: absolute;
-      left: 0;
+      left: -0.03rem;
       top: 0;
       width: 1.3rem;
       height: 2.4rem;
@@ -1201,7 +1211,7 @@ input:not(:placeholder-shown) + span {
   }
 
   &__pay-option {
-    margin-top: 1.7rem;
+    margin-top: 1.66rem;
 
     @include responsive(desktop-sm) {
       margin-top: 0rem;
